# Page-Analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: lint_check.yml  run_tests.yml
demo/: bg-25.js  water.avif
page_analyzer/: app.py  checks.py  db.py  html.py  url_valid.py
page_analyzer/templates/: 404.html  basic.html  index.html  show.html  urls.html
tests/: test_app.py  test_checks.py
